--- a/src/templates/14_publishers-advertisers.twig
+++ b/src/templates/14_publishers-advertisers.twig
@@ -18,10 +18,10 @@
 					<form>
 						<div class="form__input-container form__input-container_response">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Show another zone:</p>
+								<label for="adv-pub-show" class="form__input-text js-input-text">Show another zone:</label>
 							</div>
 							<div class="form__select-holder">
-								<select class="form__select">
+								<select id="adv-pub-show" class="form__select">
 									<option value="1">Banners Full Size 468x60 - Keywords</option>
 									<option value="2">Banners Full Size 468x60 - Keywords</option>
 									<option value="3">Banners Full Size 468x60 - Keywords</option>
