--- a/src/templates/15_new-add-advertisers.twig
+++ b/src/templates/15_new-add-advertisers.twig
@@ -13,28 +13,28 @@
 			<div class="std-adv__content std-adv__content_center">
 				<div class="form">
 					<form>
-						<label class="form__input-container js-form-input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Title</p>
+								<label for="adv-new-title" class="form__input-text js-input-text">Title</label>
 								<p class="form__input-under-text">For your reference</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input js-form-input">
+								<input id="adv-new-title" type="text" class="form__input js-form-input">
 							</div>
-						</label>
-						<label class="form__input-container">
+						</div>
+						<div class="form__input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text js-input-text">Show another zone:</p>
+								<label for="adv-new-show" class="form__input-text js-input-text">Show another zone:</label>
 							</div>
 							<div class="form__select-holder">
-								<select class="form__select">
+								<select id="adv-new-show" class="form__select">
 									<option value="1">Banners Full Size 468x60 - Keywords</option>
 									<option value="2">Banners Full Size 468x60 - Keywords</option>
 									<option value="3">Banners Full Size 468x60 - Keywords</option>
 									<option value="4">Banners Full Size 468x60 - Keywords</option>
 								</select>
 							</div>
-						</label>
+						</div>
 						<div class="form__submit-container">
 							<div class="form__submit-holder form__submit-holder_account">
 								<button class="form__submit btn">continue</button>
