--- a/src/templates/21_export-advertisers.twig
+++ b/src/templates/21_export-advertisers.twig
@@ -113,10 +113,11 @@
 
 								<div class="form__down-wrap">
 									<div class="form__date-select-wrap">
-										<label class="form__date-select">
-											<div class="form__date">Month:</div>
+										<div class="form__date-select">
+											<label for="adv-exp-month" class="form__date">Month:</label>
 											<div class="form__select-holder form__select-holder_small">
-												<select class="form__select form__select_small">
+												<select id="adv-exp-month" class="form__select form__select_small">
+													<option disabled selected>Month</option>
 													<option>January</option>
 													<option>February</option>
 													<option>March</option>
@@ -131,14 +132,14 @@
 													<option>December</option>
 												</select>
 											</div>
-										</label>
+										</div>
 
-										<label class="form__date-select">
-											<div class="form__date">Year:</div>
+										<div class="form__date-select">
+											<label for="adv-exp-year2" class="form__date">Year:</label>
 											<div class="form__input-holder">
-												<input type="text" class="form__input form__input_small">
+												<input id="adv-exp-year2" type="text" class="form__input form__input_small">
 											</div>
-										</label>
+										</div>
 									</div>
 									<button class="btn btn_block">export</button>
 								</div>
@@ -183,12 +184,12 @@
 								<div class="form__down-wrap">
 									<div class="form__date-select-wrap">
 
-										<label class="form__date-select">
-											<div class="form__date">Year:</div>
+										<div class="form__date-select">
+											<label for="adv-exp-year1" class="form__date">Year:</label>
 											<div class="form__input-holder">
-												<input type="text" class="form__input form__input_small">
+												<input id="adv-exp-year1" type="text" class="form__input form__input_small">
 											</div>
-										</label>
+										</div>
 									</div>
 									<button class="btn btn_block">export</button>
 								</div>
