Add responsive to the chart

--- a/src/css/blocks/chart.less
+++ b/src/css/blocks/chart.less
@@ -14,7 +14,9 @@
 .chart {
 
 	&__itself {
-		height: 500px;
+		//height: 500px;
+		width: 100%;
+		min-height: 500px;
 	}
 	&__tabs {
 		display: flex;
