--- a/src/css/main.less
+++ b/src/css/main.less
@@ -15,6 +15,7 @@
 	@import "blocks/info-box";
 	@import "blocks/footer";
 	@import "blocks/chart";
+	@import "blocks/chart-table";
 	@import "blocks/table-scroller";
 	@import "blocks/up-arrow";
 	@import "blocks/desktop-dropdown";
