--- a/src/templates/22_home-advertisers.twig
+++ b/src/templates/22_home-advertisers.twig
@@ -37,9 +37,8 @@
 				<div class="chart">
 					<div class="chart__itself chart-container" id="home-adv-chart"></div>
 					<div class="chart__tabs">
-						<a href="#" class="chart__tabs-item chart__tabs-item_active js-chart-tab" data-id="1">Today</a>
-						<a href="#" class="chart__tabs-item js-chart-tab" data-id="2">Month</a>
-						<a href="#" class="chart__tabs-item js-chart-tab" data-id="3">Years</a>
+						<a href="#" class="chart__tabs-item chart__tabs-item_active js-chart-tab" data-options="optionsMonth" data-data="clicksMonthData">Month</a>
+						<a href="#" class="chart__tabs-item js-chart-tab" data-options="optionsYear" data-data="clicksYearData">Years</a>
 					</div>
 				</div>
 				{#/CHART#}
@@ -69,79 +68,120 @@
 				return e;
 			};
 
-			function drawChart() {
-				// var data = google.visualization.arrayToDataTable([
-				// 	[
-				// 		{label: 'Year', id: 'year'},
-				// 		{label: 'Sales', id: 'Sales', type: 'number'}, // Use object notation to explicitly specify the data type.
-				// 	],
-				// 	['2013', 2000],
-				// 	['2014', 400],
-				// 	['2015', 1000],
-				// 	['2016', 2000],
-				// 	['2016', 500],
-				// 	['2016', 300],
-				// 	['2016', 1200],
-				// 	['2016', 1568],
-				// ]);
+			// Options for year
+			window.optionsYear = {
+				legend: {
+					position: 'none'
+				},
 
-
-
-				// var data = google.visualization.arrayToDataTable([
-				// 	[
-				// 		{label: 'Year', id: 'year', type: 'year'},
-				// 		{label: 'Sales', id: 'Sales', type: 'number'}, // Use object notation to explicitly specify the data type.
-				// 	],
-				// 	[2013, 21],
-				// 	[2014, 18],
-				// 	[2015, 27],
-				// 	[2016, 35],
-				// 	[2017, 23],
-				// 	[2018, 20]
-				// ]);
-
-				var options = {
-					legend: {
-						position: 'none'
+				hAxis: {
+					color: 'none',
+					baselineColor: 'none',
+					textStyle: {
+						color: '#fff'
 					},
-
-					hAxis: {
-						// type: 'category',
-						color: 'none',
-						baselineColor: 'none',
-						textStyle: {
-							color: '#fff',
-						},
-						gridlines: {
-							color: 'rgba(255, 255, 255, 0.5)',
-						},
+					gridlines: {
+						color: 'rgba(255, 255, 255, 0.5)'
 					},
-					vAxis: {
-						minValue: 0,
-						gridlines: {
-							color: 'rgba(255, 255, 255, 0.5)',
-						},
-						textStyle: {
-							color: '#fff',
-						}
+					format: 'y'
+				},
+				vAxis: {
+					minValue: 0,
+					gridlines: {
+						color: 'rgba(255, 255, 255, 0.5)'
 					},
-
-					backgroundColor: { fill:'transparent' },
-					colors: ['#fff'],
-					chartArea: {
-						// 'width': '90%',
-						height: '80%',
-						top: 10,
-						bottom: 40,
-						left: 80,
-						right: 80,
+					textStyle: {
+						color: '#fff'
 					}
-				};
+				},
 
+				backgroundColor: { fill:'transparent' },
+				colors: ['#fff'],
+				chartArea: {
+					height: '80%',
+					top: 10,
+					bottom: 40,
+					left: 80,
+					right: 80
+				}
+			};
+
+			// Options for month
+			window.optionsMonth = {
+				legend: {
+					position: 'none'
+				},
+
+				hAxis: {
+					color: 'none',
+					baselineColor: 'none',
+					textStyle: {
+						color: '#fff'
+					},
+					gridlines: {
+						color: 'rgba(255, 255, 255, 0.5)'
+					},
+					format: 'y/M'
+				},
+				vAxis: {
+					minValue: 0,
+					gridlines: {
+						color: 'rgba(255, 255, 255, 0.5)'
+					},
+					textStyle: {
+						color: '#fff'
+					}
+				},
+
+				backgroundColor: { fill:'transparent' },
+				colors: ['#fff'],
+				chartArea: {
+					height: '80%',
+					top: 10,
+					bottom: 40,
+					left: 80,
+					right: 80
+				}
+			};
+
+			// Current options
+			window.currentOptions = window.optionsMonth;
+
+			function drawChart() {
 				if (!window.chart) {
 					// Instantiate and draw our chart, passing in some options.
 					window.chart = new google.visualization.AreaChart(document.getElementById('home-adv-chart'));
 				}
+
+				// Clicks year data
+				window.clicksYearData = new google.visualization.DataTable();
+				window.clicksYearData.addColumn('date', 'Year');
+				window.clicksYearData.addColumn('number', 'Clicks');
+				window.clicksYearData.addRows([
+					[new Date(2013, 0), 21],
+					[new Date(2014, 0), 18],
+					[new Date(2015, 0), 27],
+					[new Date(2016, 0), 35],
+					[new Date(2017, 0), 23],
+					[new Date(2018, 0), 20]
+				]);
+
+				// Clicks month data
+				window.clicksMonthData = new google.visualization.DataTable();
+				window.clicksMonthData.addColumn('date', 'Month');
+				window.clicksMonthData.addColumn('number', 'Clicks');
+				window.clicksMonthData.addRows([
+					[new Date(2013, 0), 21],
+					[new Date(2013, 1), 18],
+					[new Date(2013, 2), 27],
+					[new Date(2013, 3), 35],
+					[new Date(2013, 4), 23],
+					[new Date(2013, 5), 20],
+					[new Date(2013, 6), 25],
+					[new Date(2013, 7), 11],
+				]);
+
+				window.currentData = window.clicksMonthData;
 
 				google.visualization.events.addListener(chart, 'ready', function(){
 
@@ -157,37 +197,26 @@
 					gradient.appendChild(createSVG('stop',{offset:'100%'}));
 				});
 
-				if (!window.chart.currentData) {
-					window.chart.currentData = new google.visualization.DataTable();
-					console.log(window.chart.currentData);
-					window.chart.currentData.addColumn('date', 'Year');
-					window.chart.currentData.addColumn('number', 'Sales');
-					window.chart.currentData.addRows([
-						[new Date(2013, 0), 21],
-						[new Date(2014, 0), 18],
-						[new Date(2015, 0), 27],
-						[new Date(2016, 0), 35],
-						[new Date(2017, 0), 23],
-						[new Date(2018, 0), 20]
-					]);
-				}
-
-				window.chart.draw(window.chart.currentData, options);
+				window.chart.draw(window.currentData, window.currentOptions);
 
 				jQuery(document).ready(function($) {
 					var $link = $('.js-chart-tab');
 
 					if (!window.chart.eventInitialized) {
 						$link.click(function() {
-							var $t = $(this);
+							var $t = $(this),
+								data = $t.data('data'),
+								options = $t.data('options');
 
 							$link.removeClass('chart__tabs-item_active');
 							$t.addClass('chart__tabs-item_active');
 
+							window.currentData = window[data];
+							window.currentOptions = window[options];
+
 							// Your logics go here
 
-							window.chart.currentData.setValue(0, 1, 1200);
-							window.chart.draw(window.chart.currentData, options);
+							window.chart.draw(window.currentData, window.currentOptions);
 							return false;
 						});
 
@@ -198,7 +227,8 @@
 			}
 
 			window.addEventListener('resize', function(){
-				drawChart();
+				// drawChart();
+				window.chart.draw(window.currentData, window.currentOptions);
 			});
 		})();
 
