--- a/src/templates/22_home-advertisers.twig
+++ b/src/templates/22_home-advertisers.twig
@@ -37,8 +37,16 @@
 				<div class="chart">
 					<div class="chart__itself chart-container" id="home-adv-chart"></div>
 					<div class="chart__tabs">
-						<a href="#" class="chart__tabs-item chart__tabs-item_active js-chart-tab" data-options="optionsMonth" data-data="clicksMonthData">Month</a>
-						<a href="#" class="chart__tabs-item js-chart-tab" data-options="optionsYear" data-data="clicksYearData">Years</a>
+						<a href="#" class="chart__tabs-item chart__tabs-item_active js-chart-period" data-period="Month">Month</a>
+						<a href="#" class="chart__tabs-item js-chart-period" data-period="Year">Years</a>
+					</div>
+					<div class="chart__asides">
+						<div class="chart__aside-wrapper">
+							<a href="#" data-dataset="impressions" class="chart__aside chart__aside_active js-chart-data">Impressions</a>
+						</div>
+						<div class="chart__aside-wrapper">
+							<a href="#" data-dataset="clicks" class="chart__aside js-chart-data">Clicks</a>
+						</div>
 					</div>
 				</div>
 				{#/CHART#}
@@ -140,12 +148,15 @@
 					top: 10,
 					bottom: 40,
 					left: 80,
-					right: 80
+					right: 40
 				}
 			};
 
+			// Current period
+			window.currentPeriod = 'Month';
+
 			// Current options
-			window.currentOptions = window.optionsMonth;
+			window.currentOptions = window['options' + window.currentPeriod];
 
 			function drawChart() {
 				if (!window.chart) {
@@ -153,14 +164,42 @@
 					window.chart = new google.visualization.AreaChart(document.getElementById('home-adv-chart'));
 				}
 
+				// Impressions year data
+				window.impressionsYearData = new google.visualization.DataTable();
+				window.impressionsYearData.addColumn('date', 'Year');
+				window.impressionsYearData.addColumn('number', 'Impressions');
+				window.impressionsYearData.addRows([
+					[new Date(2013, 0), 21],
+					[new Date(2014, 0), 18],
+					[new Date(2015, 0), 27],
+					[new Date(2016, 0), 35],
+					[new Date(2017, 0), 23],
+					[new Date(2018, 0), 20]
+				]);
+
+				// Impressions month data
+				window.impressionsMonthData = new google.visualization.DataTable();
+				window.impressionsMonthData.addColumn('date', 'Month');
+				window.impressionsMonthData.addColumn('number', 'Impressions');
+				window.impressionsMonthData.addRows([
+					[new Date(2013, 0), 21],
+					[new Date(2013, 1), 18],
+					[new Date(2013, 2), 27],
+					[new Date(2013, 3), 35],
+					[new Date(2013, 4), 23],
+					[new Date(2013, 5), 20],
+					[new Date(2013, 6), 25],
+					[new Date(2013, 7), 11]
+				]);
+
 				// Clicks year data
 				window.clicksYearData = new google.visualization.DataTable();
 				window.clicksYearData.addColumn('date', 'Year');
 				window.clicksYearData.addColumn('number', 'Clicks');
 				window.clicksYearData.addRows([
-					[new Date(2013, 0), 21],
-					[new Date(2014, 0), 18],
-					[new Date(2015, 0), 27],
+					[new Date(2013, 0), 18],
+					[new Date(2014, 0), 39],
+					[new Date(2015, 0), 16],
 					[new Date(2016, 0), 35],
 					[new Date(2017, 0), 23],
 					[new Date(2018, 0), 20]
@@ -171,17 +210,18 @@
 				window.clicksMonthData.addColumn('date', 'Month');
 				window.clicksMonthData.addColumn('number', 'Clicks');
 				window.clicksMonthData.addRows([
-					[new Date(2013, 0), 21],
-					[new Date(2013, 1), 18],
+					[new Date(2013, 0), 28],
+					[new Date(2013, 1), 14],
 					[new Date(2013, 2), 27],
-					[new Date(2013, 3), 35],
+					[new Date(2013, 3), 16],
 					[new Date(2013, 4), 23],
 					[new Date(2013, 5), 20],
-					[new Date(2013, 6), 25],
-					[new Date(2013, 7), 11],
+					[new Date(2013, 6), 166],
+					[new Date(2013, 7), 11]
 				]);
 
-				window.currentData = window.clicksMonthData;
+				window.currentDataSet = 'impressions';
+				window.currentData = window[window.currentDataSet + window.currentPeriod + 'Data'];
 
 				google.visualization.events.addListener(chart, 'ready', function(){
 
@@ -200,21 +240,37 @@
 				window.chart.draw(window.currentData, window.currentOptions);
 
 				jQuery(document).ready(function($) {
-					var $link = $('.js-chart-tab');
+					var $periodLink = $('.js-chart-period'),
+						$dataLink = $('.js-chart-data');
 
 					if (!window.chart.eventInitialized) {
-						$link.click(function() {
-							var $t = $(this),
-								data = $t.data('data'),
-								options = $t.data('options');
 
-							$link.removeClass('chart__tabs-item_active');
+						// Period
+						$periodLink.click(function() {
+							var $t = $(this),
+								period = $t.data('period');
+
+							$periodLink.removeClass('chart__tabs-item_active');
 							$t.addClass('chart__tabs-item_active');
 
-							window.currentData = window[data];
-							window.currentOptions = window[options];
+							window.currentPeriod = period;
+							window.currentOptions = window['options' + window.currentPeriod];
+							window.currentData = window[window.currentDataSet + window.currentPeriod + 'Data'];
 
-							// Your logics go here
+							window.chart.draw(window.currentData, window.currentOptions);
+							return false;
+						});
+
+						// Data set
+						$dataLink.click(function() {
+							var $t = $(this),
+								dataset = $t.data('dataset');
+
+							$dataLink.removeClass('chart__aside_active');
+							$t.addClass('chart__aside_active');
+
+							window.currentDataSet = dataset;
+							window.currentData = window[window.currentDataSet + window.currentPeriod + 'Data'];
 
 							window.chart.draw(window.currentData, window.currentOptions);
 							return false;
