Pop-up in progress

--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -50,8 +50,8 @@
 			}
 			&:last-child {
 				width: 20%;
-				text-align: right;
-				padding-right: 61px;
+				text-align: center;
+				padding-right: 10px;
 			}
 		}
 		.adv-table_campaigns-adv & {
@@ -155,8 +155,12 @@
 			.svg-icon(icon-graphic, 19px, 17px);
 		}
 		&_edit {
-			.svg-icon(icon-graphic, 19px, 19px);
+			.svg-icon(icon-edit, 19px, 19px);
 		}
+
+	}
+	&__pop-up-link {
+		text-decoration: none;
 	}
 
 	&__link-wrap {
