--- a/src/css/main.less
+++ b/src/css/main.less
@@ -48,6 +48,7 @@
 	@import "blocks/advertisers/adv-table";
 	@import "blocks/advertisers/std-adv";
 	@import "blocks/advertisers/new-adv-order";
+	@import "blocks/advertisers/pop-up";
 
 
 
