Add response pop-up and icons

--- a/src/templates/16_ads-advertisers.twig
+++ b/src/templates/16_ads-advertisers.twig
@@ -10,7 +10,7 @@
 	<div class="std-adv js-page"  style="background-image: url(img/contact-us-bg.jpg)">
 
 		{#POP-UP#}
-		<div class="popup-box {#pop-up#}">
+		<div class="popup-box">
 			<div class="popup-box__wrap">
 				<a href="#" class="popup-box__close">
 					<span class="popup-box__close-line"></span>
@@ -103,9 +103,9 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link" {#data-name="pop-up"#}>
-											<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
 								</div>
@@ -135,6 +135,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -163,6 +167,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -191,6 +199,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -219,6 +231,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -247,6 +263,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -275,6 +295,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -303,6 +327,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
@@ -331,6 +359,10 @@
 									<div class="adv-table__column">
 										<i class="adv-table__icon adv-table__icon_graphic"></i>
 										<i class="adv-table__icon adv-table__icon_edit"></i>
+										<i class="adv-table__icon adv-table__icon_delete"></i>
+										<a href="#" class="adv-table__pop-up-link popup-link">
+											<i class="adv-table__icon adv-table__icon_tag"></i>
+										</a>
 									</div>
 								</div>
 								{#/ROW#}
