--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -45,11 +45,11 @@
 				text-align: center;
 			}
 			&:nth-child(6) {
-				width: 15%;
+				width: 12%;
 				text-align: center;
 			}
 			&:last-child {
-				width: 20%;
+				width: 23%;
 				text-align: center;
 				padding-right: 10px;
 			}
@@ -157,6 +157,12 @@
 		&_edit {
 			.svg-icon(icon-edit, 19px, 19px);
 		}
+		&_delete {
+			.svg-icon(icon-delete, 13px, 18px);
+		}
+		&_tag {
+			.svg-icon(icon-tag, 25px, 12px);
+		}
 
 	}
 	&__pop-up-link {
@@ -253,7 +259,7 @@
 					width: auto;
 					min-width: 50px;
 					//height: 20%;
-					text-align: left;
+					text-align: right;
 					padding-right: 0;
 				}
 			}
@@ -356,11 +362,21 @@
 		}
 		&__icon {
 			margin-right: 10px;
+			margin-bottom: 10px;
 			&_graphic {
 				.svg-icon(icon-graphic, 14px, 12px);
 			}
 			&_edit {
 				.svg-icon(icon-edit, 14px, 14px);
+			}
+			&_delete {
+				.svg-icon(icon-delete, 9px, 14px);
+			}
+			&_tag {
+				.svg-icon(icon-tag, 21px, 8px);
+			}
+			&:nth-child(2) {
+				margin-right: 3px;
 			}
 		}
 
