--- a/src/css/blocks/advertisers/pop-up.less
+++ b/src/css/blocks/advertisers/pop-up.less
@@ -91,8 +91,12 @@
 	.popup-box {
 		width: 60%;
 		left: 20%;
-		top: 160px;
-
+		&__text {
+			line-height: 1.3;
+			color: #8c9398;
+			font-size: @14;
+			width: 80%;
+		}
 		&__wrap {
 			padding: 20px;
 			padding-top: 30px;
@@ -120,6 +124,25 @@
 	.popup-box {
 		width: 70%;
 		left: 15%;
+		top: 400px;
+		&__title {
+			.regular();
+			color: #242830;
+			font-size: @14;
+		}
+		&__text {
+			line-height: 1;
+			color: #8c9398;
+			font-size: @12;
+			width: 90%;
+		}
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.popup-box {
+		width: 90%;
+		left: 5%;
 		top: 400px;
 	}
 }
