--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -186,6 +186,16 @@
 	}
 }
 
+@media screen and (max-width: 868px) {
+	.adv-table {
+
+		&__icon {
+			margin-right: 12px;
+		}
+	}
+
+}
+
 @media screen and (max-width: 768px) {
 	.adv-table {
 
