Add link-wrap to icons

--- a/src/templates/16_ads-advertisers.twig
+++ b/src/templates/16_ads-advertisers.twig
@@ -101,10 +101,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -133,10 +139,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -165,10 +177,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -197,10 +215,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -229,10 +253,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -261,10 +291,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -293,10 +329,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -325,10 +367,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
@@ -357,10 +405,16 @@
 										<p class="adv-table__text">0</p>
 									</div>
 									<div class="adv-table__column">
-										<i class="adv-table__icon adv-table__icon_graphic"></i>
-										<i class="adv-table__icon adv-table__icon_edit"></i>
-										<i class="adv-table__icon adv-table__icon_delete"></i>
-										<a href="#" class="adv-table__pop-up-link popup-link">
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_graphic"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_edit"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap">
+											<i class="adv-table__icon adv-table__icon_delete"></i>
+										</a>
+										<a href="#" class="adv-table__icon-link-wrap popup-link">
 											<i class="adv-table__icon adv-table__icon_tag"></i>
 										</a>
 									</div>
