--- a/src/css/blocks/advertisers/adv-table.less
+++ b/src/css/blocks/advertisers/adv-table.less
@@ -147,10 +147,6 @@
 	&__icon {
 		display: inline-block;
 		vertical-align: middle;
-		margin-right: 20px;
-		&:last-child {
-			margin-right: 0;
-		}
 		&_graphic {
 			.svg-icon(icon-graphic, 19px, 17px);
 		}
@@ -163,10 +159,14 @@
 		&_tag {
 			.svg-icon(icon-tag, 25px, 12px);
 		}
-
 	}
-	&__pop-up-link {
+	&__icon-link-wrap {
+		display: inline-block;
 		text-decoration: none;
+		margin-right: 20px;
+		&:last-child {
+			margin-right: 0;
+		}
 	}
 
 	&__link-wrap {
@@ -189,7 +189,7 @@
 @media screen and (max-width: 868px) {
 	.adv-table {
 
-		&__icon {
+		&__icon-link-wrap {
 			margin-right: 12px;
 		}
 	}
@@ -371,8 +371,6 @@
 			text-align: center;
 		}
 		&__icon {
-			margin-right: 10px;
-			margin-bottom: 10px;
 			&_graphic {
 				.svg-icon(icon-graphic, 14px, 12px);
 			}
@@ -385,6 +383,10 @@
 			&_tag {
 				.svg-icon(icon-tag, 21px, 8px);
 			}
+		}
+		&__icon-link-wrap {
+			margin-right: 10px;
+			margin-bottom: 10px;
 			&:nth-child(2) {
 				margin-right: 3px;
 			}
