--- a/src/css/main.less
+++ b/src/css/main.less
@@ -7,7 +7,9 @@
 
 @import "swiper";
 @import "icheck";
-@import "jquery.mCustomScrollbar.less";
+@import "jquery.mCustomScrollbar";
+@import "jquery.arcticmodal-0.3";
+
 
 
 	//BLOCKS
@@ -19,6 +21,7 @@
 	@import "blocks/table-scroller";
 	@import "blocks/up-arrow";
 	@import "blocks/desktop-dropdown";
+	@import "blocks/pop-up";
 
 
 	//PUBLISHERS
@@ -48,7 +51,6 @@
 	@import "blocks/advertisers/adv-table";
 	@import "blocks/advertisers/std-adv";
 	@import "blocks/advertisers/new-adv-order";
-	@import "blocks/advertisers/pop-up";
 
 
 
