--- a/src/templates/16_ads-advertisers.twig
+++ b/src/templates/16_ads-advertisers.twig
@@ -11,8 +11,8 @@
 
 		{#POP-UP#}
 		<div class="popup-box">
-			<div class="popup-box__wrap">
-				<a href="#" class="popup-box__close">
+			<div class="popup-box__wrap box-modal" id="exampleModal">
+				<a href="#" class="popup-box__close box-modal_close arcticmodal-close">
 					<span class="popup-box__close-line"></span>
 					<span class="popup-box__close-line"></span>
 				</a>
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 					<div class="popup-box__button">
-						<button class="btn btn_block">ok</button>
+						<button class="btn btn_block" id="close-pop-up">ok</button>
 					</div>
 				</form>
 			</div>
