--- a/src/templates/15_new-add-advertisers.twig
+++ b/src/templates/15_new-add-advertisers.twig
@@ -35,6 +35,23 @@
 								</select>
 							</div>
 						</div>
+
+						{#DROP-ZONE#}
+						<div class="form__input-container">
+							<div class="drop">
+								<div class="drop__content">
+									<i class="drop__icon"></i>
+									<p class="drop__title">
+										Drop a file here or click to upload
+									</p>
+									<p class="drop__max-size">
+										Maximum upload size: 100MB
+									</p>
+								</div>
+							</div>
+						</div>
+						{#DROP-ZONE#}
+
 						<div class="form__submit-container">
 							<div class="form__submit-holder form__submit-holder_account">
 								<button class="form__submit btn">continue</button>
