--- a/src/css/main.less
+++ b/src/css/main.less
@@ -22,6 +22,7 @@
 	@import "blocks/up-arrow";
 	@import "blocks/desktop-dropdown";
 	@import "blocks/pop-up";
+	@import "blocks/drop";
 
 
 	//PUBLISHERS
