--- a/src/templates/16_ads-advertisers.twig
+++ b/src/templates/16_ads-advertisers.twig
@@ -16,28 +16,22 @@
 					<span class="popup-box__close-line"></span>
 					<span class="popup-box__close-line"></span>
 				</a>
+				<h3 class="popup-box__title">Code for embded</h3>
+				<p class="popup-box__text">
+					Some text, as described how to do it. Some text, as described how to do it.
+					Some text, as described how to do it. Some text, as described how to do it.
+					Some text, as described how to do it.
+				</p>
 				<div class="popup-box__block">
-					<p class="popup-box__title">Code for embded</p>
-				</div>
-				<div class="popup-box__block">
-					<p class="popup-box__text">
-						Some text, as described how to do it. Some text, as described how to do it.
-						Some text, as described how to do it. Some text, as described how to do it.
-						Some text, as described how to do it.
-					</p>
-				</div>
-				<form>
-					<div class="popup-box__block">
-						<div class="form__input-container">
-							<div class="form__input-holder">
-								<textarea  cols="30" rows="10" class="form__textarea form__textarea_publishers form__textarea_black"  placeholder="Code"></textarea>
-							</div>
+					<div class="form__input-container">
+						<div class="form__input-holder">
+							<textarea  cols="30" rows="10" class="form__textarea form__textarea_publishers form__textarea_black"  placeholder="Code"></textarea>
 						</div>
 					</div>
-					<div class="popup-box__button">
-						<button class="btn btn_block" id="close-pop-up">ok</button>
-					</div>
-				</form>
+				</div>
+				<div class="popup-box__button">
+					<button class="btn btn_block" id="close-pop-up">ok</button>
+				</div>
 			</div>
 		</div>
 		{#/POP-UP#}
