--- a/src/css/blocks/pop-up.less
+++ b/src/css/blocks/pop-up.less
@@ -1,5 +1,5 @@
 .popup-box {
-	display: none;
+
 	&__wrap {
 		position: relative;
 		width: 50%;
@@ -32,19 +32,18 @@
 
 		}
 	}
-	&__block {
-		margin-bottom: 25px;
-	}
 	&__title {
 		.regular();
 		color: #242830;
 		font-size: @16;
+		margin-bottom: 25px;
 	}
 	&__text {
 		line-height: 1.7;
 		color: #8c9398;
 		font-size: @14;
 		width: 80%;
+		margin-bottom: 25px;
 	}
 	&__button {
 		width: 30%;
@@ -62,8 +61,9 @@
 		}
 		&__text {
 			line-height: 1.3;
+			margin-bottom: 15px;
 		}
-		&__block {
+		&__title {
 			margin-bottom: 15px;
 		}
 		&__close {
