--- a/src/templates/15_new-add-advertisers.twig
+++ b/src/templates/15_new-add-advertisers.twig
@@ -38,16 +38,20 @@
 
 						{#DROP-ZONE#}
 						<div class="form__input-container">
-							<div class="drop">
-								<div class="drop__content">
-									<i class="drop__icon"></i>
-									<p class="drop__title">
-										Drop a file here or click to upload
-									</p>
-									<p class="drop__max-size">
-										Maximum upload size: 100MB
-									</p>
+							<div class="drop form__drop js-drop">
+								<div class="drop__content js-upload-button">
+									<div class="drop__content-defore js-upload-defore">
+										<i class="drop__icon"></i>
+										<p class="drop__title">
+											Drop a file here or click to upload
+										</p>
+										<p class="drop__max-size">
+											Maximum upload size: 100MB
+										</p>
+									</div>
+									<div class="drop__content-after js-upload-after"></div>
 								</div>
+								<input type="file" class="form__upload js-upload-input">
 							</div>
 						</div>
 						{#DROP-ZONE#}
