--- a/src/templates/16_ads-advertisers.twig
+++ b/src/templates/16_ads-advertisers.twig
@@ -22,11 +22,9 @@
 					Some text, as described how to do it. Some text, as described how to do it.
 					Some text, as described how to do it.
 				</p>
-				<div class="popup-box__block">
-					<div class="form__input-container">
-						<div class="form__input-holder">
-							<textarea  cols="30" rows="10" class="form__textarea form__textarea_publishers form__textarea_black"  placeholder="Code"></textarea>
-						</div>
+				<div class="form__input-container form__input-container_pop-up-block">
+					<div class="form__input-holder">
+						<textarea  cols="30" rows="10" class="form__textarea form__textarea_black"  placeholder="Code"></textarea>
 					</div>
 				</div>
 				<div class="popup-box__button">
