--- a/src/templates/15_new-add-advertisers.twig
+++ b/src/templates/15_new-add-advertisers.twig
@@ -40,7 +40,7 @@
 						<div class="form__input-container">
 							<div class="drop form__drop js-drop">
 								<div class="drop__content js-upload-button">
-									<div class="drop__content-defore js-upload-defore">
+									<div class="drop__content-before js-upload-before">
 										<i class="drop__icon"></i>
 										<p class="drop__title">
 											Drop a file here or click to upload
