--- a/src/css/blocks/drop.less
+++ b/src/css/blocks/drop.less
@@ -4,6 +4,10 @@
 	background: rgba(255, 255, 255, 0.2);
 	text-align: center;
 
+	&_drag-over {
+		background: @turquoise-color;
+	}
+
 	&__content {
 		min-height: 254px;
 		padding-top: 75px;
@@ -25,6 +29,9 @@
 		color: #8c9398;
 		.regular();
 		font-size: @14;
+		.drop_drag-over & {
+			color: white;
+		}
 	}
 	&__content-after {
 		color: white;
@@ -32,6 +39,7 @@
 		font-size: @24;
 		display: none;
 		padding-top: 50px;
+		pointer-events: none;
 	}
 }
 
