--- a/src/templates/18_create-new-order-advertisers.twig
+++ b/src/templates/18_create-new-order-advertisers.twig
@@ -9,7 +9,7 @@
 {#CAMPAIGNS ADVERTISERS#}
 	<div class="std-adv js-page"  style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="std-adv__container container">
-			<div class="std-adv__title-wrap">
+			<div class="std-awdv__title-wrap">
 				<h1 class="std-adv__title">Create a New Order</h1>
 				<p class="std-adv__subtitle">Select a package to order</p>
 			</div>
