Add styles for link

--- a/src/css/init.less
+++ b/src/css/init.less
@@ -26,6 +26,10 @@ blockquote:before, blockquote:after,
 q:before, q:after {content: ''; content: none;}
 table {border-collapse: collapse; border-spacing: 0;}
 
+a {
+	color: white;
+}
+
 * {
 	box-sizing: border-box;
 }
