Redone textarea value

--- a/src/templates/16_ads-advertisers.twig
+++ b/src/templates/16_ads-advertisers.twig
@@ -24,7 +24,8 @@
 				</p>
 				<div class="form__input-container form__input-container_pop-up-block">
 					<div class="form__input-holder">
-						<textarea  cols="30" rows="10" class="form__textarea form__textarea_black"  placeholder="Code"></textarea>
+						<textarea  readonly cols="30" rows="10" class="form__textarea form__textarea_black">&lt;ins class='area-ad' data-area-ad-client=9>&lt;/ins&gt;
+&lt;script async defer src=http://localhost/js/area.js&gt;&lt;/script&gt;</textarea>
 					</div>
 				</div>
 				<div class="popup-box__button">
