--- a/src/css/blocks/header.less
+++ b/src/css/blocks/header.less
@@ -186,6 +186,10 @@
 		.medium();
 		text-decoration: none;
 		transition: all .3s ease;
+		white-space: nowrap;
+		overflow: hidden;
+		max-width: 130px;
+		text-overflow: ellipsis;
 		.header_grey & {
 			color: #353535;
 		}
@@ -296,6 +300,7 @@
 		color: #00c9b3;
 		font-size: @16;
 		.medium();
+		white-space: nowrap;
 		.header__add-new:hover & {
 			.no-touchevents & {
 				text-decoration: underline;
