--- a/src/templates/15_new-add-advertisers.twig
+++ b/src/templates/15_new-add-advertisers.twig
@@ -36,25 +36,45 @@
 							</div>
 						</div>
 
-						{#DROP-ZONE#}
 						<div class="form__input-container">
-							<div class="drop form__drop js-drop">
-								<div class="drop__content js-upload-button">
-									<div class="drop__content-before js-upload-before">
-										<i class="drop__icon"></i>
-										<p class="drop__title">
-											Drop a file here or click to upload
-										</p>
-										<p class="drop__max-size">
-											Maximum upload size: 100MB
-										</p>
+							<div class="form__pad-right js-form-tab-parent">
+								<div class="form__tab-container">
+
+									{#DROP-ZONE#}
+									<div class="form__tab js-form-tab js-form-tab_file">
+										<div class="drop form__drop js-drop">
+											<div class="drop__content js-upload-button">
+												<div class="drop__content-before js-upload-before">
+													<i class="drop__icon"></i>
+													<p class="drop__title">
+														Drop a file here or click to upload
+													</p>
+													<p class="drop__max-size">
+														Maximum upload size: 100MB
+													</p>
+												</div>
+												<div class="drop__content-after js-upload-after"></div>
+											</div>
+											<input type="file" class="form__upload js-upload-input">
+										</div>
 									</div>
-									<div class="drop__content-after js-upload-after"></div>
+									{#/DROP-ZONE#}
+
+									{#CODE#}
+									<div class="form__tab js-form-tab js-form-tab_code">
+										<textarea class="form__textarea form__textarea_code" placeholder="Paste code here"></textarea>
+									</div>
+									{#/CODE#}
+
 								</div>
-								<input type="file" class="form__upload js-upload-input">
+								<div class="form__tab-links">
+									<a href="#" class="form__tab-link form__tab-link_active js-form-tab-link" data-tab="file" data-linked-input="#type" data-linked-value="IMG">File</a>
+									<a href="#" class="form__tab-link js-form-tab-link" data-tab="code" data-linked-input="#type" data-linked-value="HTML">Code</a>
+								</div>
 							</div>
 						</div>
-						{#DROP-ZONE#}
+
+						<input type="hidden" name="type" value="IMG" id="type">
 
 						<div class="form__submit-container">
 							<div class="form__submit-holder form__submit-holder_account">
